Corrijo error de ortografía

--- a/Actas/Acta-07_02_2024.md
+++ b/Actas/Acta-07_02_2024.md
@@ -14,4 +14,4 @@
 ## Desarrollo y acuerdos
 1. Como metología se ha decidico implementar una Ágil, en concreto Scrum.
 2. Para sincronizar el desarrollo del equipo se ha decidido convocar una reunión semanal.
-3. Como gestor de versiones y plataforma de desarrollo colavorativo se ha decidido utilizar GitHub.
+3. Como gestor de versiones y plataforma de desarrollo colaborativa se ha decidido utilizar GitHub.
