Actualizo la ultima versión del acta

--- a/Actas/Acta-14_02_2024.md
+++ b/Actas/Acta-14_02_2024.md
@@ -15,9 +15,9 @@
 
 
 ## Desarrollo y acuerdos
-1. No se ha llegado a un consenso para la BBDD a utilizar. En la siguiente reunión se decidirá.
-2. Se ha decidido utilizar JavaScript como lenguaje para el backend.
-3. Se ha decidido utilizar HTML para el front.
-4. Se ha aprobado el uso de librerías, se ha acordado el uso de la librería React como prueba.
-5. Las actas pasarán a formato digital y se almacenaran en GitHub.
+1. Como almacenamiento de datos se ha elegido una Base de Datos relacional, para el comienzo se ha decidido implantar PostgreSQL.  
+2. Se ha decidido utilizar JavaScript como lenguaje para el backend en entorno de node.js.
+3. Se ha decidido utilizar HTML como lenguaje principal para el front.
+4. Se ha aprobado el uso de librerías, se ha acordado el uso de la librería React como innovación para el front.
+5. Las actas pasarán a formato digital y se almacenarán en GitHub.
 6. El sistema de contenedores que se ha decidido implementar es Docker.
