--- a/docs/actas/Acta-2024_02_21.md
+++ b/docs/actas/Acta-2024_02_21.md
@@ -1,1 +1,17 @@
+# Acta de reunión
+**Fecha de la reunión:** Miércoles 21 de febrero de 2024  
+**Hora de la reunión:** De 19:00 a 20:00  
+**Lugar de la reunión:** Universidad Pública de Navarra  
+**Asistentes:**
+- Xinyu Chen
+- Igor Irigoyen
+- Iker Urdaniz
+## Orden del día
+1. Tecnología para uso de API.
+2. Alternativas al uso de API.
+
+
+## Desarrollo y acuerdos
+1. Gana por mayoría el uso de APIs por no contar con una alternativa viable.
+2. Se ha acordado el hacer un POC para ver su funcionamiento antes de implementarlo.
 
