--- a/docs/actas/Acta-2024_03_06.md
+++ b/docs/actas/Acta-2024_03_06.md
@@ -1,1 +1,21 @@
+# Acta de reunión
+**Fecha de la reunión:** Miércoles 6 de marzo de 2024  
+**Hora de la reunión:** De 19:00 a 20:00  
+**Lugar de la reunión:** Universidad Pública de Navarra  
+**Asistentes:**
+- Xinyu Chen
+- Igor Irigoyen
+- Iker Urdaniz
+## Orden del día
+1. Despedida de Iker
+2. Replanteamiento de tecnologías
+3. Implantar las APIs
+4. Uso de API keys
+
+
+## Desarrollo y acuerdos
+1. Baja de un miembro del equipo afectando al alcance del proyecto, se tomará una decisión el la siguiente reunión.
+2. Se ha implantado una API para la suma de los votos.
+3. Se ha decidido usar Kong como gestor de APIs, este gestor también nos permite el uso de API keys. 
+
 
