--- a/docs/actas/Acta-2024_03_13.md
+++ b/docs/actas/Acta-2024_03_13.md
@@ -1,1 +1,17 @@
+# Acta de reunión
+**Fecha de la reunión:** Miércoles 18 de marzo de 2024  
+**Hora de la reunión:** De 19:00 a 20:00  
+**Lugar de la reunión:** Universidad Pública de Navarra  
+**Asistentes:**
+- Xinyu Chen
+- Igor Irigoyen
+## Orden del día
+1. Replanteamiento de tecnologías
+2. Implantar las APIs
+3. Uso de API keys
+
+
+## Desarrollo y acuerdos
+Reunión cancelada por la imposibilidad de asistir a la reunión por parte de Iker e Igor.
+
 
