--- a/docs/actas/Acta-2024_03_13.md
+++ b/docs/actas/Acta-2024_03_13.md
@@ -6,12 +6,10 @@
 - Xinyu Chen
 - Igor Irigoyen
 ## Orden del día
-1. Replanteamiento de tecnologías
-2. Implantar las APIs
-3. Uso de API keys
+1. Cambio de tecnología para la BBDD.
+2. Alcance del proyecto debido a la baja de Iker.
 
 
 ## Desarrollo y acuerdos
-Reunión cancelada por la imposibilidad de asistir a la reunión por parte de Iker e Igor.
 
 
